<resources>
    <string name="app_name">FoodWeek</string>
    <string name="title_week">My Week</string>
    <string name="title_plan">Meal Plans</string>
    <string name="title_plan_details">Meal Plans Details</string>
    <string name="title_shopping">Shopping List</string>
    <string name="default_recipe_image">https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Recipe_Unlimited_logo.png/320px-Recipe_Unlimited_logo.png</string>
    <string name="recipe_not_found">recipe not found:</string>
    <string name="ingredients_list_header">Ingredients</string>
    <string name="steps_list_header">Preparation</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_bar_browse">Browse</string>
    <string name="tab_bar_manage">Manage</string>
    <string name="main_image_of_recipe">Main Image of Recipe</string>
    <string name="share_button_icon">Share Button Icon</string>
    <string name="favorite_button_icon">Favorite Button Icon</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="edit_your_meal_plan">Edit your meal plan</string>
    <string name="assign_this_meal_plan_to_a_week">Assign this meal plan to a week</string>
...
