...
    <item
        android:id="@+id/navigation_week"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_week" />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_plan" />

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_baseline_shoppinglist_24"
...
